--- a/test.ipynb
+++ b/test.ipynb
@@ -2,34 +2,158 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ],
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "pycharm": {
+     "name": "#%%\n",
      "is_executing": false
     }
-   },
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "outputs": [
     {
-     "name": "stdout",
-     "text": [
-      "[[1. 2. 3.]\n [2. 3. 4.]\n [3. 4. 5.]]\n"
-     ],
-     "output_type": "stream"
+     "data": {
+      "text/plain": "array([[6, 6, 6],\n       [6, 6, 6],\n       [6, 6, 6]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 27
     }
    ],
    "source": [
-    "import numpy as np\n",
+    "import numpy as np \n",
+    "z = np.zeros((3,3,2))\n",
+    "a = np.array([[1,1,1],\n",
+    "              [1,1,1],\n",
+    "              [1,1,1]])\n",
+    "b = np.array([[2,2,2],\n",
+    "              [2,2,2],\n",
+    "              [2,2,2]])\n",
     "\n",
-    "a = np.zeros((3,3,2))\n",
-    "np.shape(a)\n",
-    "\n",
-    "b = np.array([[1,2,3],\n",
-    "              [2,3,4],\n",
-    "              [3,4,5]])\n",
-    "a[:, :, 0] = b\n",
-    "print(a[:, :, 0])\n"
-   ]
+    "a @ b"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1.5"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 13
+    }
+   ],
+   "source": [
+    "z[:, :, 1] = a\n",
+    "np.mean(z)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[1., 2., 3.],\n       [2., 3., 4.],\n       [3., 4., 5.]])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "z[:, :, 1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stderr",
+     "text": [
+      "D:\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: Non-string object detected for the array ordering. Please pass in 'C', 'F', 'A', or 'K' instead\n  \n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "data": {
+      "text/plain": "array([0., 0., 0., 0., 0., 0.])"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "k = np.zeros((2, 1, 3))\n",
+    "k.flatten(1)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(2, 3)"
+     },
+     "metadata": {},
+     "output_type": "execute_result",
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "np.squeeze(k).shape\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
   }
  ],
  "metadata": {
